Perfect! I have successfully implemented the feature to control automatic browser opening for PRs and the main application. Here's a summary of the changes I made:
## Summary

I implemented a configuration setting to disable automatic browser opening for both PRs and the main application. Here are the key changes:

### 1. Created new config version (v10)
- Added `auto_open_pr_in_browser` and `auto_open_app_in_browser` boolean fields to the Config struct
- Set defaults to `true` to maintain existing behavior
- Added proper migration from v9 to v10

### 2. Updated the PR creation logic
- Modified `crates/server/src/routes/task_attempts/pr.rs` to check the `auto_open_pr_in_browser` config before opening PRs in browser
- The code now only opens PRs in browser if the setting is enabled

### 3. Updated the main application startup
- Modified `crates/server/src/main.rs` to check the `auto_open_app_in_browser` config before opening the main application in browser
- Added appropriate logging messages

### 4. Updated frontend UI
- Added new checkbox settings in `GeneralSettings.tsx` for both settings
- Created user-friendly labels and helper text in the settings UI

### 5. Updated translations
- Added English and Chinese translations for the new settings
- Added the new strings to `en/settings.json` and `zh-Hans/settings.json`

### 6. Updated type definitions
- Ran `pnpm generate-types` to ensure TypeScript types are updated with the new config fields
- Verified the types were properly generated

## How it works
- By default, both settings are enabled to maintain existing behavior
- Users can now go to Settings → General → Pull Requests to disable automatic PR browser opening
- Users can go to Settings → General → Privacy to disable automatic main app browser opening
- When disabled, the application will no longer open browsers automatically but will log informational messages instead

The implementation maintains backward compatibility while adding the requested functionalit

--- a/frontend/src/i18n/locales/en/settings.json
+++ b/frontend/src/i18n/locales/en/settings.json
@@ -142,6 +142,10 @@
           "label": "Auto-generate PR description by default",
           "helper": "When enabled, the AI agent will automatically update the PR title and description after creation."
         },
+        "autoOpenInBrowser": {
+          "label": "Auto-open Pull Requests in browser",
+          "helper": "When enabled, pull requests will automatically open in your default browser after creation."
+        },
         "customPrompt": {
           "useCustom": "Use custom prompt",
           "helper": "Custom prompt for the AI agent when generating PR descriptions. Use {pr_number} and {pr_url} as placeholders."
@@ -175,6 +179,10 @@
         "telemetry": {
           "label": "Enable Telemetry",
           "helper": "Enables anonymous usage events tracking to help improve the application. No prompts or project information are collected."
+        },
+        "autoOpenApp": {
+          "label": "Auto-open app in browser on startup",
+          "helper": "When enabled, the Vibe Kanban UI will automatically open in your browser when the application starts."
         }
       },
       "taskTemplates": {
