I've implemented the "Run arbitrary command" feature. Here's a summary of the changes:
## Summary

### Backend Changes

1. **`crates/db/src/models/execution_process.rs`** - Added `ArbitraryCommand` variant to `ExecutionProcessRunReason` enum

2. **`crates/executors/src/actions/script.rs`** - Added `ArbitraryCommand` variant to `ScriptContext` enum

3. **`crates/server/src/routes/task_attempts.rs`** - Added:
   - `RunArbitraryCommandRequest` struct with a `command` field
   - `RunArbitraryCommandError` enum with `ProcessAlreadyRunning` and `EmptyCommand` variants
   - `run_arbitrary_command` handler that creates an `ExecutionProcess` with the arbitrary command
   - Route `/run-command` mapped to the handler

4. **`crates/server/src/bin/generate_types.rs`** - Added type exports for the new request/error types

### Frontend Changes

1. **`frontend/src/lib/api.ts`** - Added:
   - Import for `RunArbitraryCommandRequest` and `RunArbitraryCommandError` types
   - `runCommand` method in `attemptsApi` to call the backend endpoint

2. **`frontend/src/hooks/useExecutionProcesses.ts`** - Updated `isAttemptRunning` check to include `'arbitrarycommand'`

3. **`frontend/src/hooks/useConversationHistory.ts`** - Updated filter to include `'arbitrarycommand'` so outputs show in the chat

4. **`frontend/src/components/dialogs/tasks/RunCommandDialog.tsx`** - New dialog component with:
   - Command input field with `$` prompt
   - Scrollable output area showing command history
   - Live streaming of command output
   - Exit code display (green for 0, red otherwise)
   - Disabled input when processes are running

5. **`frontend/src/components/tasks/TaskFollowUpSection.tsx`** - Added:
   - Import for `RunCommandDialog`
   - `handleOpenRunCommand` handler
   - Menu item with Terminal icon in the dropdown

6. **Translation files** (en, es, ja, ko, zh-Hans) - Added `followUp.runCommand` translations for:
   - `menuItem`, `title`, `placeholder`, `noCommands`, `waitForProcess`
   - Error messa

--- a/frontend/src/i18n/locales/en/tasks.json
+++ b/frontend/src/i18n/locales/en/tasks.json
@@ -175,7 +175,17 @@
     "runCleanupScript": "Run cleanup script",
     "noSetupScript": "No setup script configured for this project",
     "noCleanupScript": "No cleanup script configured for this project",
-    "scriptsDisabledWhileRunning": "Cannot run scripts while a process is running"
+    "scriptsDisabledWhileRunning": "Cannot run scripts while a process is running",
+    "runCommand": {
+      "menuItem": "Run command",
+      "title": "Run Command",
+      "placeholder": "Enter a command to run...",
+      "noCommands": "Run a command to see output here",
+      "waitForProcess": "Wait for the current process to finish before running another command",
+      "errorProcessRunning": "A process is already running. Please wait for it to finish.",
+      "errorEmptyCommand": "Command cannot be empty",
+      "errorGeneric": "Failed to run command. Please try again."
+    }
   },
   "todos": {
     "title_one": "Todos ({{count}})",
