--- a/frontend/src/i18n/locales/zh-Hans/tasks.json
+++ b/frontend/src/i18n/locales/zh-Hans/tasks.json
@@ -188,7 +188,17 @@
     "runCleanupScript": "运行清理脚本",
     "noSetupScript": "未为此项目配置设置脚本",
     "noCleanupScript": "未为此项目配置清理脚本",
-    "scriptsDisabledWhileRunning": "进程运行时无法运行脚本"
+    "scriptsDisabledWhileRunning": "进程运行时无法运行脚本",
+    "runCommand": {
+      "menuItem": "运行命令",
+      "title": "运行命令",
+      "placeholder": "输入要运行的命令...",
+      "noCommands": "运行命令后将在此处显示输出",
+      "waitForProcess": "请等待当前进程完成后再运行其他命令",
+      "errorProcessRunning": "进程正在运行中。请等待其完成。",
+      "errorEmptyCommand": "命令不能为空",
+      "errorGeneric": "命令执行失败。请重试。"
+    }
   },
   "todos": {
     "title_one": "待办事项（{{count}}）",
