I've made the following changes:
**1. Simplified `RunCommandDialog.tsx`:**
- Removed the command output display from the dialog
- Dialog now just has a command input field and Run button
- When command is submitted successfully, the dialog closes immediately
- Added a description explaining that output will appear in chat history

**2. Updated `useConversationHistory.ts`:**
- Added `UserCommand` case to the switch statement that handles `ScriptRequest` types
- User commands now appear in the chat history with the tool name "User Command"

**3. Updated translation files** (en, es, ja, ko, zh-Hans):
- Added `description` key: explains output appears in chat history
- Added `run` key: button label
- Removed unused keys (`noCommands`)

Now when you run a command:
1. Click "Run command" from the menu
2. Type your command and press Enter or click "Run"
3. Dialog closes
4. Command output appears in the chat history area, just like setup/cleanup scripts

--- a/frontend/src/i18n/locales/en/tasks.json
+++ b/frontend/src/i18n/locales/en/tasks.json
@@ -179,8 +179,9 @@
     "runCommand": {
       "menuItem": "Run command",
       "title": "Run Command",
+      "description": "Run a shell command in the workspace. Output will appear in the chat history.",
       "placeholder": "Enter a command to run...",
-      "noCommands": "Run a command to see output here",
+      "run": "Run",
       "waitForProcess": "Wait for the current process to finish before running another command",
       "errorProcessRunning": "A process is already running. Please wait for it to finish.",
       "errorEmptyCommand": "Command cannot be empty",
