--- a/frontend/src/i18n/locales/zh-Hans/tasks.json
+++ b/frontend/src/i18n/locales/zh-Hans/tasks.json
@@ -195,6 +195,8 @@
       "description": "在工作区中运行 shell 命令。输出将显示在聊天历史记录中。",
       "placeholder": "输入要运行的命令...",
       "run": "运行",
+      "timeoutPlaceholder": "超时",
+      "timeoutUnit": "秒",
       "waitForProcess": "请等待当前进程完成后再运行其他命令",
       "errorProcessRunning": "进程正在运行中。请等待其完成。",
       "errorEmptyCommand": "命令不能为空",
