Done. Changed the timeout unit from "s" to "secs" in the English translation for clarity.

--- a/frontend/src/i18n/locales/en/tasks.json
+++ b/frontend/src/i18n/locales/en/tasks.json
@@ -183,7 +183,7 @@
       "placeholder": "Enter a command to run...",
       "run": "Run",
       "timeoutPlaceholder": "Timeout",
-      "timeoutUnit": "s",
+      "timeoutUnit": "secs",
       "waitForProcess": "Wait for the current process to finish before running another command",
       "errorProcessRunning": "A process is already running. Please wait for it to finish.",
       "errorEmptyCommand": "Command cannot be empty",
