Done. Updated the dialog description to mention the timeout feature.

--- a/frontend/src/i18n/locales/en/tasks.json
+++ b/frontend/src/i18n/locales/en/tasks.json
@@ -179,7 +179,7 @@
     "runCommand": {
       "menuItem": "Run command",
       "title": "Run Command",
-      "description": "Run a shell command in the workspace. Output will appear in the chat history.",
+      "description": "Run a shell command in the workspace. Output will appear in the chat history. Commands timeout after the specified duration.",
       "placeholder": "Enter a command to run...",
       "run": "Run",
       "timeoutPlaceholder": "Timeout",
