- Added a new **Preview** item to the task card actions dropdown; it navigates to the task’s latest attempt with `view=preview` set (`frontend/src/components/ui/actions-dropdown.tsx`). - Added the `actionsMenu.preview` i18n string in `frontend/src/i18n/locales/en/tasks.json`, `frontend/src/i18n/locales/es/tasks.json`, and `frontend/src/i18n/locales/zh-Hans/tasks.json`. - Verified with `pnpm run check`.

--- a/frontend/src/i18n/locales/en/tasks.json
+++ b/frontend/src/i18n/locales/en/tasks.json
@@ -343,6 +343,7 @@
     "gitActions": "Git actions",
     "editBranchName": "Edit branch name",
     "task": "Task",
+    "preview": "Preview",
     "share": "Share",
     "reassign": "Reassign",
     "stopShare": "Stop share",
