- Added a new **Preview** item to the task card actions dropdown; it navigates to the task’s latest attempt with `view=preview` set (`frontend/src/components/ui/actions-dropdown.tsx`). - Added the `actionsMenu.preview` i18n string in `frontend/src/i18n/locales/en/tasks.json`, `frontend/src/i18n/locales/es/tasks.json`, and `frontend/src/i18n/locales/zh-Hans/tasks.json`. - Verified with `pnpm run check`.

--- a/frontend/src/i18n/locales/zh-Hans/tasks.json
+++ b/frontend/src/i18n/locales/zh-Hans/tasks.json
@@ -338,6 +338,7 @@
     "gitActions": "Git 操作",
     "editBranchName": "编辑分支名称",
     "task": "任务",
+    "preview": "预览",
     "share": "共享",
     "reassign": "重新分配",
     "stopShare": "停止共享",
