--- a/frontend/src/i18n/locales/en/tasks.json
+++ b/frontend/src/i18n/locales/en/tasks.json
@@ -338,6 +338,7 @@
     "gitActions": "Git actions",
     "editBranchName": "Edit branch name",
     "task": "Task",
+    "preview": "Preview",
     "share": "Share",
     "reassign": "Reassign",
     "stopShare": "Stop share",
