All checks pass. Let me summarize the changes I made for browser notifications:
## Summary of Browser Notification Implementation

### Backend Changes (Rust)

1. **`crates/services/src/services/config/versions/v2.rs`**
   - Added `browser_enabled: bool` field to `NotificationConfig`
   - Updated `Default` and `From` implementations

2. **`crates/services/src/services/events/patches.rs`**
   - Added `browser_notification_patch` module with `BrowserNotification` struct
   - Implemented `send()` function to create JSON patches for notifications

3. **`crates/services/src/services/events.rs`**
   - Exported `browser_notification_patch` module

4. **`crates/services/src/services/notification.rs`**
   - Added `events_msg_store` field to `NotificationService`
   - Added `with_events_msg_store()` builder method
   - Implemented `send_browser_notification()` to push notifications via SSE

5. **`crates/local-deployment/src/container.rs`**
   - Updated `LocalContainerService::new()` to accept `events_msg_store` parameter

6. **`crates/local-deployment/src/lib.rs`**
   - Passed `events_msg_store` to `LocalContainerService::new()`

### Frontend Changes (TypeScript/React)

1. **`frontend/src/hooks/useBrowserNotifications.ts`** (new file)
   - Created hook that subscribes to SSE events
   - Requests browser notification permission when enabled
   - Shows browser notifications when `browser_notification` patches arrive

2. **`frontend/src/App.tsx`**
   - Added `useBrowserNotifications` hook to enable global notification listening

3. **`frontend/src/pages/settings/GeneralSettings.tsx`**
   - Added "Browser Notifications" checkbox UI

4. **`frontend/src/i18n/locales/en/settings.json`**
   - Added translations for browser notifications

5. **`shared/types.ts`**
   - Auto-generated with `browser_enabled` field

## Complete Feature Summary

The implementation now supports **three types of notifications**:

1. **Script Notifications** - Execute a custom shell command/webhook with variab

--- a/frontend/src/i18n/locales/en/settings.json
+++ b/frontend/src/i18n/locales/en/settings.json
@@ -161,6 +161,10 @@
           "label": "Push Notifications",
           "helper": "Show system notifications when task attempts finish running."
         },
+        "browser": {
+          "label": "Browser Notifications",
+          "helper": "Show browser notifications when task attempts finish running. Requires browser permission."
+        },
         "script": {
           "label": "Script Notifications",
           "helper": "Execute a custom script or webhook when notification events occur.",
