I've successfully implemented the project-wide deployment script feature. Here's a summary of what was done:
## Summary of Changes

### Backend (Rust)

1. **Database Migration** (`crates/db/migrations/20260101000000_add_deployment_script_to_projects.sql`)
   - Added `deployment_script` column to the projects table

2. **Project Model** (`crates/db/src/models/project.rs`)
   - Added `deployment_script: Option<String>` to `Project` struct
   - Added `deployment_script: Option<String>` to `UpdateProject` struct
   - Updated all SQL queries (find_all, find_by_id, find_by_rowid, find_by_remote_project_id, find_most_active, create, update) to include the new field

3. **API Endpoint** (`crates/server/src/routes/projects.rs`)
   - Added new `POST /api/projects/:id/run-deployment-script` endpoint
   - Supports optional branch checkout before running the script
   - Fire-and-forget script execution with proper error handling

4. **Service Updates** (`crates/services/src/services/project.rs`, `crates/services/src/services/container.rs`)
   - Updated `UpdateProject` usage to include the new field

5. **Type Generation** (`crates/server/src/bin/generate_types.rs`)
   - Added types for `RunDeploymentScriptRequest`, `RunDeploymentScriptResponse`, `RunDeploymentScriptError`

### Frontend (TypeScript/React)

1. **New Dialog Component** (`frontend/src/components/dialogs/projects/RunDeploymentScriptDialog.tsx`)
   - Dialog with branch selection dropdown
   - Shows available branches from the project's first repository
   - Handles success/error states with appropriate feedback

2. **Project Settings** (`frontend/src/pages/settings/ProjectSettings.tsx`)
   - Added deployment script field in the project configuration form
   - Uses `AutoExpandingTextarea` for multi-line script input

3. **Project Card** (`frontend/src/components/projects/ProjectCard.tsx`)
   - Added "Run Deployment" option in the dropdown menu (only shows when script is configured)

4. **Project Detail** (`frontend/src

--- a/frontend/src/i18n/locales/en/settings.json
+++ b/frontend/src/i18n/locales/en/settings.json
@@ -380,6 +380,10 @@
         "copyFiles": {
           "label": "Copy Files",
           "helper": "Comma-separated list of files to copy from the original project directory to the worktree. These files will be copied after the worktree is created but before the setup script runs. Useful for environment-specific files like .env, configuration files, and local settings. Make sure these are gitignored or they could get committed!"
+        },
+        "deployment": {
+          "label": "Deployment Script",
+          "helper": "A script to run deployment commands for this project. This can be triggered from the project screen and optionally checkout a specific branch before running."
         }
       },
       "save": {
