All checks pass. I've updated the `RunDeploymentScriptDialog` to:
1. **Show the deployment script** - Displays the script in a scrollable `<pre>` block with monospace font so users can review what will be executed
2. **Allow branch selection** - The existing branch dropdown is preserved, letting users optionally checkout a specific branch before running the script
3. **Wider dialog** - Increased width from 425px to 550px to accommodate script display

The translations have been updated for all locales (en, ja, ko, zh-Hans, es) with the new `scriptLabel` key.

--- a/frontend/src/i18n/locales/en/projects.json
+++ b/frontend/src/i18n/locales/en/projects.json
@@ -13,6 +13,7 @@
     "dialog": {
       "title": "Run Deployment Script",
       "description": "Run the deployment script for {{name}}",
+      "scriptLabel": "Deployment Script",
       "branchLabel": "Branch (optional)",
       "branchPlaceholder": "Select a branch to checkout first",
       "currentBranch": "Use current branch",
