The implementation is complete. Here's a summary of the changes:
**Backend Changes:**
- Modified `RunDeploymentScriptResponse` to include `stdout`, `stderr`, and `exit_code` fields
- Changed from fire-and-forget (`spawn()`) to synchronous execution (`output()`) to capture the output
- The script now waits for completion and returns the full output

**Frontend Changes:**
- Added expandable output section to the deployment dialog
- Shows stdout and stderr in separate scrollable areas
- Output is expanded by default after script completion
- Changed footer to show "Close" button after script runs instead of "Cancel"/"Run"
- Success/error states properly reflect the exit code

**Translation Updates:**
- Added new keys: `close`, `outputLabel`, `scriptFailed`
- Updated success message to "completed" instead of "started"
- All locales updated (en, ja, ko, zh-Hans, es)

--- a/frontend/src/i18n/locales/en/projects.json
+++ b/frontend/src/i18n/locales/en/projects.json
@@ -19,14 +19,17 @@
       "currentBranch": "Use current branch",
       "branchHelper": "Optionally checkout a specific branch before running the deployment script",
       "cancel": "Cancel",
+      "close": "Close",
       "run": "Run Deployment",
       "running": "Running...",
-      "success": "Deployment script started successfully!"
+      "success": "Deployment script completed successfully!",
+      "outputLabel": "Script Output"
     },
     "errors": {
       "noScriptConfigured": "No deployment script configured for this project. Configure one in project settings.",
       "noRepositories": "No repositories found for this project.",
       "gitCheckoutFailed": "Failed to checkout branch: {{message}}",
+      "scriptFailed": "Deployment script failed with exit code {{exitCode}}",
       "unknown": "An unknown error occurred"
     }
   },
