--- a/frontend/src/i18n/locales/es/projects.json
+++ b/frontend/src/i18n/locales/es/projects.json
@@ -19,14 +19,17 @@
       "currentBranch": "Usar rama actual",
       "branchHelper": "Opcionalmente cambia a una rama específica antes de ejecutar el script de despliegue",
       "cancel": "Cancelar",
+      "close": "Cerrar",
       "run": "Ejecutar Despliegue",
       "running": "Ejecutando...",
-      "success": "¡Script de despliegue iniciado correctamente!"
+      "success": "¡Script de despliegue completado correctamente!",
+      "outputLabel": "Salida del Script"
     },
     "errors": {
       "noScriptConfigured": "No hay script de despliegue configurado para este proyecto. Configura uno en la configuración del proyecto.",
       "noRepositories": "No se encontraron repositorios para este proyecto.",
       "gitCheckoutFailed": "Error al cambiar de rama: {{message}}",
+      "scriptFailed": "El script de despliegue falló con código de salida {{exitCode}}",
       "unknown": "Ocurrió un error desconocido"
     }
   },
