--- a/frontend/src/i18n/locales/zh-Hans/projects.json
+++ b/frontend/src/i18n/locales/zh-Hans/projects.json
@@ -19,14 +19,17 @@
       "currentBranch": "使用当前分支",
       "branchHelper": "可选择在运行部署脚本前检出特定分支",
       "cancel": "取消",
+      "close": "关闭",
       "run": "运行部署",
       "running": "运行中...",
-      "success": "部署脚本已成功启动！"
+      "success": "部署脚本已成功完成！",
+      "outputLabel": "脚本输出"
     },
     "errors": {
       "noScriptConfigured": "此项目未配置部署脚本。请在项目设置中配置。",
       "noRepositories": "此项目没有仓库。",
       "gitCheckoutFailed": "分支检出失败：{{message}}",
+      "scriptFailed": "部署脚本失败，退出代码 {{exitCode}}",
       "unknown": "发生未知错误"
     }
   },
