I have successfully implemented the feature to create a new branch for a task with cherry-picked changes. Here's a summary of the changes:
## Summary of Changes

### Backend (Rust)

1. **`crates/services/src/services/git/cli.rs`**
   - Added `cherry_pick_range()` method to cherry-pick a range of commits
   - Added `create_branch_at()` method to create a branch at a specific commit
   - Added `checkout_branch()` method to checkout a branch
   - Added `rev_list_range()` method to list commits in a range
   - Added `get_head_sha()` method to get the current HEAD SHA

2. **`crates/services/src/services/git.rs`**
   - Added `cherry_pick_to_new_branch()` method that:
     - Creates a new branch from a specified base branch
     - Cherry-picks only the commits that were made as part of the task (from merge-base to HEAD)
     - Handles conflicts and returns appropriate error messages

3. **`crates/server/src/routes/task_attempts.rs`**
   - Added request/response types: `CherryPickToNewBranchRequest`, `CherryPickToNewBranchResponse`, `CherryPickToNewBranchError`
   - Added `cherry_pick_to_new_branch` endpoint at `POST /api/task-attempts/{id}/cherry-pick-to-new-branch`
   - Route validates branch names, checks for conflicts/in-progress operations, and updates workspace after successful cherry-pick

4. **`crates/server/src/bin/generate_types.rs`**
   - Registered the new types for TypeScript generation

### Frontend (TypeScript/React)

1. **`frontend/src/hooks/useCherryPickToNewBranch.ts`** (new file)
   - React Query mutation hook for the cherry-pick operation
   - Handles success/error callbacks and cache invalidation

2. **`frontend/src/components/dialogs/tasks/CherryPickToNewBranchDialog.tsx`** (new file)
   - Dialog component with:
     - Input for new branch name
     - Branch selector for base branch (defaults to target branch)
     - Error display and validation

3. **`frontend/src/components/tasks/Toolbar/GitOperations.tsx`**
   - Added "Copy to new branch" button to 

--- a/frontend/src/i18n/locales/en/tasks.json
+++ b/frontend/src/i18n/locales/en/tasks.json
@@ -354,6 +354,27 @@
       "action": "Rename Branch"
     }
   },
+  "cherryPickToNewBranch": {
+    "action": "Copy to new branch",
+    "dialog": {
+      "title": "Copy Changes to New Branch",
+      "description": "Cherry-pick the changes from this task onto a new branch based on any existing branch.",
+      "newBranchNameLabel": "New Branch Name",
+      "newBranchNamePlaceholder": "e.g., feature/my-new-branch",
+      "baseBranchLabel": "Base Branch",
+      "baseBranchPlaceholder": "Select a base branch",
+      "baseBranchHelp": "The new branch will be created from this branch, and your changes will be applied on top.",
+      "inProgress": "Copying...",
+      "action": "Create & Apply Changes",
+      "error": "Failed to cherry-pick changes to new branch",
+      "errors": {
+        "emptyName": "Branch name cannot be empty",
+        "sameName": "New branch name must be different from current branch",
+        "hasSpaces": "Branch name cannot contain spaces",
+        "noBaseBranch": "Please select a base branch"
+      }
+    }
+  },
   "stopShareDialog": {
     "title": "Stop Sharing Task",
     "description": "Stop sharing \"{{title}}\" with your organization?",
